- Added error when trying to trade a non tradable item
- Added --server-type / -y parameter
- Re-download updates when their checksum no longer matches
- Enabled resizing windows from all sides
- Enabled whispers in tabs by default
- Made pickup notifications to appear as particle instead of text by default
- Custom mouse cursor is now rendered by the system
- Fixed performance issue in BrowserBox (especially update/news window)
- Fixed handling of non-consecutive emote IDs
- Fixed securing of names in files created by chat logger
- Fixed wrong offset values for tab widget drawing
- Fixed positioning of window menu
- Fixed some issues with OpenGL rendering
- Fixed NPC disappearing when changing appearance on tmwAthena
- Fixed drawing issues with tiles that don't match the grid width
- Fixed --chat-log-dir also setting the screenshot directory
- Fixed tile animations for CSV maps
- Fixed settings window being unavailable when updating was done
- Fixed text clipping in tooltips
- Fixed handling of paths with special characters on Windows
- Fixed being popup getting stuck under the mouse
- Fixed item links with empty item name to look up name from Item DB
- Fixed spaces getting added to chat every 50 characters
- Fixed empty Equipment window on freshly created character
- Updated to tmwAthena protocol changes
- Updated to Manaserv protocol changes (specials, guilds, debug mode, skills, text particles)
- CMake: Use GNUInstallDirs and made PKG_DATADIR / PKG_BINDIR paths modifiable
- CMake: Don't overwrite system/environment CXXFLAGS
- CMake: Added option to use system ENet
- CMake: Make using system Guichan optional (also available as submodule)
- CMake: Allow using CPack to generate an NSIS installer and macOS App Bundle
- Now requires C++17
- Updated Russian translation

0.6.1 (2 April 2012)
- Made it easier to click beings that are next to other beings
- Removed NPC trade messages from chat (again)
- Fixed swapping of ring and necklace equipment slots